Revision history for {{$dist->name}}

{{$NEXT}}
  - Use http instead of ftp

0.09      2017-08-17 14:34:11 -0400
  - Production release identical to 0.08_01

0.08_01   2017-08-04 15:24:06 -0400
  - Support for MSYS2 / MinGW

0.07      2017-08-04 06:49:21 -0400
  - Make help2man a no-op instead of touching man files during build
    (Fixes problem where time resolution on windows may not be good enough)
    (ZMUGHAL++ gh#2)

0.06      2017-07-28 11:23:18 -0400
  - Support for running out of blib directory

0.05      2017-07-28 10:16:40 -0400
  - Fixed hiccup where Alien:::MSYS was added as a
    test prereq on non-Windows platforms

0.04      2017-07-07 03:03:34 -0400
  - Fixes for OpenBSD.

0.03      2017-07-05 12:50:20 -0400
  - Add dependency on Alien::m4

0.02      2017-06-27 05:11:19 -0400
  - Fix requirements for Windows

0.01      2017-06-26 17:24:43 -0400
  - initial version