@@ -15,6 +15,7 @@ travis_status = 1
 release_tests = 1
 installer     = Author::Plicease::MakeMaker
 irc           = irc://irc.perl.org/#native
+test2_v0      = 1
 
 [AlienBuild]
 
