@@ -1,7 +1,7 @@
-use strict;
-use warnings;
+use Test2::V0 -no_srand => 1;
 use Config;
-use Test::More tests => 1;
+
+eval q{ require Test::More };
 
 # This .t file is generated.
 # make changes instead to dist.ini
@@ -23,7 +23,6 @@ $modules{$_} = $_ for qw(
   Sort::Versions
   Test2::V0
   Test::Alien
-  Test::More
 );
 
 
@@ -70,7 +69,7 @@ if(@keys > 0)
 
 diag sprintf $format, 'perl ', $];
 
-foreach my $module (@modules)
+foreach my $module (sort @modules)
 {
   if(eval qq{ require $module; 1 })
   {
@@ -92,3 +91,4 @@ if($post_diag)
 
 spacer;
 
+done_testing;
