@@ -2,6 +2,7 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
   - Use http instead of ftp
+  - Attempt to use system version of libtool
 
 0.09      2017-08-17 14:34:11 -0400
   - Production release identical to 0.08_01
